<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryDarkColor">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvfavotivishow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="5dp"
        app:cardCornerRadius="13dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgPosterMovies"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/poster"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@drawable/shade" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tivifavId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/gen_favo_id"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:contentDescription="@string/title_general"/>
                <TextView
                    android:id="@+id/tivifavTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/fav_title_general"
                    android:textColor="@color/black"
                    android:contentDescription="@string/title_general"/>

            </LinearLayout>
            <TextView
                android:id="@+id/tivifavOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ellipsize="end"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/fav_overview_general"
                android:textColor="@color/black"
                android:contentDescription="@string/overview"/>
            <TextView
                android:id="@+id/tivifavCreator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/fav_creator_general"
                android:textColor="@color/black"
                android:contentDescription="@string/creator"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>